--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <body>
     <button>CLICK</button>
 
-    <script type="module" src="script.js"></script>
+    <script type="module" src="https://albingyllander.github.io/js-notification-library/script.js"></script>
 </body>
 </html>
