--- a/index.html
+++ b/index.html
@@ -11,22 +11,7 @@
 <body>
     <button>CLICK</button>
 
-    <!-- <script type="module" src=""></script> -->
-    <script>
-        document.querySelector("button").addEventListener("click", () => {
-            import notification from "https://albingyllander.github.io/js-notification-library/script.js"
-            const available_position = ['top-right','top-left','top-center','bottom-right','bottom-left','bottom-center']
-            const available_priority= ['alert','standard','warning']
-            const notificationItem = new notification({
-                
-                position: Math.floor(Math.random() * (6  - 1 + 1) + 1),
-                autoClose:3000,
-                text:'Incorrect login',
-                close:true,
-                priorityType: Math.floor(Math.random() * (3  - 1 + 1) + 1),
+    <script type="module" src="https://albingyllander.github.io/js-notification-library/script.js"></script>
 
-            })
-        })
-    </script>
 </body>
 </html>
